# OpenGL-Project

Part1/ImageKit-master/: CMakeLists.txt  common.h  main.cpp
Part1/ImageKit-master/Image/: SetEnv.cmake
Part2/ImageKit/: main.cpp
